--- a/static/content.html
+++ b/static/content.html
@@ -18,7 +18,7 @@
     <ul class="bx--header__menu-bar" role="menubar" aria-label="Platform Name">
 
       <li class="bx--header__submenu" data-header-submenu>
-        <a class="bx--header__menu-item bx--header__menu-title" role="menuitem" href="javascript:void(0)" tabindex="0">
+        <a class="bx--header__menu-item bx--header__menu-title" role="menuitem" href="/emoticons" tabindex="0">
           Emoticons
           <!-- <svg class="bx--header__menu-arrow" width="12" height="7" aria-hidden="true">
             <path d="M6.002 5.55L11.27 0l.726.685L6.003 7 0 .685.726 0z" />
@@ -43,7 +43,7 @@
       </li>
       <li class="bx--header__submenu" data-header-submenu>
         <a class="bx--header__menu-item bx--header__menu-title" role="menuitem" aria-haspopup="true"
-          aria-expanded="false" href="javascript:void(0)" tabindex="0">
+          aria-expanded="false" href="/spheres" tabindex="0">
           Spheres
           <!-- <svg class="bx--header__menu-arrow" width="12" height="7" aria-hidden="true">
             <path d="M6.002 5.55L11.27 0l.726.685L6.003 7 0 .685.726 0z" />
@@ -194,7 +194,7 @@
             </button>
             <ul id="category-1-menu" class="bx--navigation__category-items" role="menu">
               <li class="bx--navigation__category-item bx--navigation__category-item--active">
-                <a class="bx--navigation-link" href="javascript:void(0)" role="menuitem">
+                <a class="bx--navigation-link" href="/emoticons" role="menuitem">
                   <svg aria-hidden="true" width="15" height="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                     <polygon points="18 13 18 4 16 4 16 6 13 6 13 8 16 8 16 13 13 13 13 15 21 15 21 13 18 13"/><path d="M16.5,20A3.5,3.5,0,1,1,13,23.5,3.5,3.5,0,0,1,16.5,20m0-2A5.5,5.5,0,1,0,22,23.5,5.5,5.5,0,0,0,16.5,18Z"/><polygon points="8 30 2 30 2 2 8 2 8 4 4 4 4 28 8 28 8 30"/><polygon points="30 30 24 30 24 28 28 28 28 4 24 4 24 2 30 2 30 30"/><rect id="_Transparent_Rectangle_" data-name="&lt;Transparent Rectangle&gt;" class="cls-1" width="32" height="32"/>
                   </svg>&ensp;
@@ -202,7 +202,7 @@
                 </a>
               </li>
               <li class="bx--navigation__category-item">
-                <a class="bx--navigation-link" href="javascript:void(0)" role="menuitem">
+                <a class="bx--navigation-link" href="/spheres" role="menuitem">
                   <svg aria-hidden="true" width="15" height="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                     <polygon points="30 4 24 4 24 6 27.75 6 24 10 24 12 30 12 30 10 26.38 10 30 6 30 4"/><path d="M20,17.62,22.08,14l-1.73-1-2.18,3.76A12,12,0,0,0,2,28H4a10,10,0,0,1,13.16-9.48L14,24a2,2,0,1,0,2,2,2,2,0,0,0-.27-1L19,19.35A10,10,0,0,1,24,28h2A12,12,0,0,0,20,17.62Z"/><rect id="_Transparent_Rectangle_" data-name="&lt;Transparent Rectangle&gt;" class="cls-1" width="32" height="32"/>
                   </svg>&ensp;
