--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -38,7 +38,20 @@
                 </svg>
                 Dashboard
               </h1>
-              Lorem ipsum dolor sit amet.<br><br>
+
+              <br><br>
+              Choose your application:<br><br><br><br>
+
+              <a class="bx--btn bx--btn--primary" type="button" href="/emoticons" style="width:230px;">
+                Emoticons Quantizer
+              </a>
+
+              <br><br>
+
+              <a class="bx--btn bx--btn--primary" type="button" href="/spheres" style="width:230px;">
+                Operators on Spheres&ensp;
+              </a>
+
             </div>
           </div>
 
@@ -52,6 +65,32 @@
       <!-- Right column: outputs -->
       <div class="col l7 s12">
 
+        <div class="row">
+          <div class="col l12 s12">
+
+            <br>
+
+            <h2>Our framework</h2>
+
+        Creating applications running on a quantum computer is currently not yet standardised. There are no end-to-end systems to help web developers exploring quantum world
+        We propose a set of methods that allows to:<br><br>
+        - create and deploy web applications that use a quantum computer as back-end<br>
+        - open to an end-to-end solution with all the needed structures for web hybrid classical-quantum computing<br>
+
+        <br>
+        This proposed set of methods could be implemented using various technologies.<br><br><br>
+
+        The prototype we created based on this system. It is a set of web applications that:<br><br>
+        - take a set of inputs from a user interface<br>
+        - sends it to the back-end<br>
+        - performs some operations with classical and quantum computing o send back the output to the front-end to be visualised<br>
+
+        <br>
+        It relies on an approach to quantum web applications oriented to real business (alternative to Jupyter Notebooks) and it is easily deployable on cloud (it is cloud native)
+
+        </div>
+
+        </div>
 
       </div>
 
