--- a/static/docs.html
+++ b/static/docs.html
@@ -52,14 +52,14 @@
             <a tabindex="0" id="tab-link-2" class="bx--tabs__nav-link" href="javascript:void(0)" role="tab" aria-controls="tab-panel-2">
               Operators on Spheres</a>
           </li>
-          <li class="bx--tabs__nav-item " data-target=".tab-3" role="presentation" >
+          <!-- <li class="bx--tabs__nav-item " data-target=".tab-3" role="presentation" >
             <a tabindex="0" id="tab-link-3" class="bx--tabs__nav-link" href="javascript:void(0)" role="tab" aria-controls="tab-panel-3">
               3D Bloch Sphere</a>
           </li>
           <li class="bx--tabs__nav-item " data-target=".tab-4" role="presentation" >
             <a tabindex="0" id="tab-link-4" class="bx--tabs__nav-link" href="javascript:void(0)" role="tab" aria-controls="tab-panel-4">
               QAE Viewer</a>
-          </li>
+          </li> -->
       </ul>
     </nav>
     <div>
@@ -70,7 +70,7 @@
 
             <!-- Begin Quantum Emoticons -->
             <div class="col l2 s12">
-              <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="#" target="_blank">
+              <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="/emoticons">
                 <h2>Emoticons Quantizer</h2>
                 <span class="right-link">
                   <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true" style="will-change: transform;"><path d="M13 14H3c-.6 0-1-.4-1-1V3c0-.6.4-1 1-1h5v1H3v10h10V8h1v5c0 .6-.4 1-1 1z"></path><path d="M10 1v1h3.3L9 6.3l.7.7L14 2.7V6h1V1z"></path></svg>
@@ -83,41 +83,19 @@
                   <li data-accordion-item class="bx--accordion__item bx--accordion__item--active">
                     <button class="bx--accordion__heading" aria-expanded="false" aria-controls="pane1">
                         <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" class="bx--accordion__arrow" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path></svg>
-                      <div class="bx--accordion__title">Section 1 title</div>
+                      <div class="bx--accordion__title">Description</div>
                     </button>
                     <div id="pane1" class="bx--accordion__content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                      <p>In this application we propose a generalization of what is presented on IBMQ Experience tutorial (Quantum Emoticon) where the reader can test how the two main principles of quantum computing are exploited: the superposition and the entanglement. </p>
                     </div>
                   </li>
                   <li data-accordion-item class="bx--accordion__item">
                     <button class="bx--accordion__heading" aria-expanded="false" aria-controls="pane2">
                         <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" class="bx--accordion__arrow" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path></svg>
-                      <div class="bx--accordion__title">Section 2 title</div>
+                      <div class="bx--accordion__title">How to use it</div>
                     </button>
                     <div id="pane2" class="bx--accordion__content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                  </li>
-                  <li data-accordion-item class="bx--accordion__item">
-                    <button class="bx--accordion__heading" aria-expanded="false" aria-controls="pane3">
-                        <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" class="bx--accordion__arrow" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path></svg>
-                      <div class="bx--accordion__title">Section 3 title</div>
-                    </button>
-                    <div id="pane3" class="bx--accordion__content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                  </li>
-                  <li data-accordion-item class="bx--accordion__item">
-                    <button class="bx--accordion__heading" aria-expanded="false" aria-controls="pane4">
-                        <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" class="bx--accordion__arrow" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path></svg>
-                      <div class="bx--accordion__title">Section 4 title</div>
-                    </button>
-                    <div id="pane4" class="bx--accordion__content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                      <p>Here the reader can use every combination of ASCII character and visualize their realization with qubits, either simulated or real according to what is available on IBMQ Experience. For more information about how to use the IBM Q ExperienceQX, consult the tutorials, or check out the community.</p>
                     </div>
                   </li>
               </ul>
@@ -130,12 +108,11 @@
         <div id="tab-panel-2" class="tab-2" role="tabpanel" aria-labelledby="tab-link-2" aria-hidden="true" hidden>
           <p style="padding: 0 1rem; font-size: 14px; font-weight: 600;">
 
-
                         <br><br>
 
                         <!-- Begin Quantum Spheres -->
                         <div class="col l2 s12">
-                          <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="#" target="_blank">
+                          <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="/spheres">
                             <h2>Operators on Spheres</h2>
                             <span class="right-link">
                               <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true" style="will-change: transform;"><path d="M13 14H3c-.6 0-1-.4-1-1V3c0-.6.4-1 1-1h5v1H3v10h10V8h1v5c0 .6-.4 1-1 1z"></path><path d="M10 1v1h3.3L9 6.3l.7.7L14 2.7V6h1V1z"></path></svg>
@@ -148,41 +125,28 @@
                               <li data-accordion-item class="bx--accordion__item bx--accordion__item--active">
                                 <button class="bx--accordion__heading" aria-expanded="false" aria-controls="pane1">
                                     <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" class="bx--accordion__arrow" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path></svg>
-                                  <div class="bx--accordion__title">Section 1 title</div>
+                                  <div class="bx--accordion__title">Description</div>
                                 </button>
                                 <div id="pane1" class="bx--accordion__content">
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                  <p>This APP feature make use of well known math representation of vector in 3 dimension which is widely used in this quantum com-puting dissemination as it is a clear and and useful tool: the Bloch Sphere. The user can visualize the effect of quantum gate application on its qubit (versor). Since we are working with orthonormal basis we give the user the freedom to star from different basis: X-basis, Y-basis or Z-basis. Current version of the application does not allow subsequent gate application so the user must reset its result before applying a new transformation. The user can perform measurement of the quantum state on all the three basis (x,y,z) in order to reconstruct the quantum state on the Bloch Sphere. </p>
                                 </div>
                               </li>
                               <li data-accordion-item class="bx--accordion__item">
                                 <button class="bx--accordion__heading" aria-expanded="false" aria-controls="pane2">
                                     <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" class="bx--accordion__arrow" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path></svg>
-                                  <div class="bx--accordion__title">Section 2 title</div>
+                                  <div class="bx--accordion__title">How to use it</div>
                                 </button>
                                 <div id="pane2" class="bx--accordion__content">
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                  <p>In order to make this algorithm fully visual we utilized the python library qutip (http://qutip.org/) that allows to perform analytical calculation and build the block sphere. The interesting feature is that the result of gate application is showed on two separate Bloch Spheres. In the left one the user is pre-sent the result coming from IBMQ Experience while on the right one we present the analytic result. This comparison can help to understand some typical quantum defects com- ing from real hardware noise or approximation.</p>
                                 </div>
                               </li>
                               <li data-accordion-item class="bx--accordion__item">
                                 <button class="bx--accordion__heading" aria-expanded="false" aria-controls="pane3">
                                     <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" class="bx--accordion__arrow" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path></svg>
-                                  <div class="bx--accordion__title">Section 3 title</div>
+                                  <div class="bx--accordion__title">The algorithm</div>
                                 </button>
                                 <div id="pane3" class="bx--accordion__content">
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                </div>
-                              </li>
-                              <li data-accordion-item class="bx--accordion__item">
-                                <button class="bx--accordion__heading" aria-expanded="false" aria-controls="pane4">
-                                    <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" class="bx--accordion__arrow" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path></svg>
-                                  <div class="bx--accordion__title">Section 4 title</div>
-                                </button>
-                                <div id="pane4" class="bx--accordion__content">
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                  <p>This algorithm it’s defined inside the ibm quantum experience User guide, it consist to We decided to offer two different prospectives giving two bloch-spheres (<a href="https://quantumexperience.ng.bluemix.net/proxy/tutorial/full-user-guide/002-The_Weird_and_Wonderful_World_of_the_Qubit/005-The_Bloch_Sphere.html" target="_blank">Quantum Experience docs link</a>), one to show the QST performance and another one to show the analytical calculation (quantum tomography - <a href="https://en.wikipedia.org/wiki/Quantum_tomography" target="_blank">Quantum Tomography Wikipedia link</a>), in order to give evidence of the errors coming from dechoerence/noise generated from the real device or from the configured noise-simulator.</p>
                                 </div>
                               </li>
                           </ul>
@@ -192,7 +156,7 @@
 
           </p>
         </div>
-        <div id="tab-panel-3" class="tab-3" role="tabpanel" aria-labelledby="tab-link-3" aria-hidden="true" hidden>
+        <!-- <div id="tab-panel-3" class="tab-3" role="tabpanel" aria-labelledby="tab-link-3" aria-hidden="true" hidden>
           <p style="padding: 0 1rem; font-size: 14px; font-weight: 600;">
           <br><br>
             Coming soon!
@@ -203,7 +167,7 @@
           <br><br>
             Coming soon!
           </p>
-        </div>
+        </div> -->
     </div>
 
 
