--- a/static/spheres.html
+++ b/static/spheres.html
@@ -85,7 +85,7 @@
               <!-- OPERATORS -->
               <button class="bx--btn bx--btn--primary bx--btn--sm gate-btn" type="button" name="action" style="background-color:rgb(0, 121, 205);" id="h">H</button>&thinsp;
               <button class="bx--btn bx--btn--primary bx--btn--sm gate-btn" type="button" name="action" style="background-color:rgb(16, 125, 121);" id="x">X</button>&thinsp;
-              <button class="bx--btn bx--btn--primary bx--btn--sm gate-btn" type="button" name="action" style="background-color:rgb(16, 125, 121);" id="y">Y</button>&thinsp;
+              <!-- <button class="bx--btn bx--btn--primary bx--btn--sm gate-btn" type="button" name="action" style="background-color:rgb(16, 125, 121);" id="y">Y</button>&thinsp; -->
               <button class="bx--btn bx--btn--primary bx--btn--sm gate-btn" type="button" name="action" style="background-color:rgb(16, 125, 121);" id="z">Z</button>&thinsp;
               <br><br>
               <button class="bx--btn bx--btn--primary bx--btn--sm gate-btn" type="button" name="action" style="background-color:rgb(218, 30, 40);" id="s">S</button>&thinsp;
@@ -108,7 +108,7 @@
               <br><br>
               Want to know more?
               <br>
-              Read our documentation <a href="#" class="bx--link">here</a>.
+              Read our documentation <a href="/docs" class="bx--link">here</a>.
             </div>
           </div>
 
