--- a/static/team.html
+++ b/static/team.html
@@ -26,7 +26,7 @@
 
   <div class="row">
 
-    <div class="col l7 s12">
+    <div class="col l12 s12">
       <h1>Meet the Italian Team</h1>
       We come from different areas of IBM and our daily work covers a wide range of topics, but we have a common passion on quantum computing.<br><br>
     </div>
@@ -39,13 +39,14 @@
 
     <div class="col l4 s12">
 
-      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://priorart.ip.com/IPCOM/000258553" target="_blank">
+      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://www.linkedin.com/in/federicoaccetta/" target="_blank">
         <h2>Federico Accetta</h2>
         <span class="right-tile-img">
           <img src="static/team/accetta.png">
         </span>
         IBM Q Ambassador<br>
-        Watson Technical Specialist<br>
+        IBM Garage Developer<br><br>
+        <span style="font-style:italic!important;">Back-end developer</span><br>
         <br>
         <span class="bx--tag bx--tag--teal">IBM Cloud</span>
         <br>
@@ -58,13 +59,14 @@
 
     <div class="col l4 s12">
 
-      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://priorart.ip.com/IPCOM/000258553" target="_blank">
+      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://www.linkedin.com/in/gabriele-agliardi-50471047/" target="_blank">
         <h2>Gabriele Agliardi</h2>
         <span class="right-tile-img">
           <img src="static/team/agliardi.png">
         </span>
         IBM Q Ambassador<br>
-        Supply Chain Management<br>
+        Supply Chain Management<br><br>
+        <span style="font-style:italic!important;">Theory and testing</span><br>
         <br>
         <span class="bx--tag bx--tag--purple">IBM GBS</span>
         <br>
@@ -77,13 +79,14 @@
 
     <div class="col l4 s12">
 
-      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://priorart.ip.com/IPCOM/000258553" target="_blank">
+      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://www.linkedin.com/in/antonello-aita/" target="_blank">
         <h2>Antonello Aita</h2>
         <span class="right-tile-img">
           <img src="static/team/aita.png">
         </span>
         Cognitive and Analytics<br>
-        Data Scientist<br>
+        Data Scientist<br><br>
+        <span style="font-style:italic!important;">Main developer</span><br>
         <br>
         <span class="bx--tag bx--tag--purple">IBM GBS</span>
         <br>
@@ -100,13 +103,14 @@
 
     <div class="col l4 s12">
 
-      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://priorart.ip.com/IPCOM/000258553" target="_blank">
+      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://www.linkedin.com/in/luca-crippa-a29a98a2/" target="_blank">
         <h2>Luca Crippa</h2>
         <span class="right-tile-img">
           <img src="static/team/crippa.png">
         </span>
         IT Architect<br>
-        Hybrid Cloud solutions<br>
+        Hybrid Cloud solutions<br><br>
+        <span style="font-style:italic!important;">Main developer</span><br>
         <br>
         <span class="bx--tag bx--tag--cyan">IBM GTS</span>
         <br>
@@ -119,13 +123,14 @@
 
     <div class="col l4 s12">
 
-      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://priorart.ip.com/IPCOM/000258553" target="_blank">
+      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://www.linkedin.com/in/michele-grossi-42157486/" target="_blank">
         <h2>Michele Grossi</h2>
         <span class="right-tile-img">
           <img src="static/team/grossi.png">
         </span>
         IBM Q Ambassador<br>
-        Client Technical Architect<br>
+        Client Technical Architect<br><br>
+        <span style="font-style:italic!important;">Theory and project management</span><br>
         <br>
         <span class="bx--tag bx--tag--blue">IBM Digital Sales</span>
         <br>
@@ -138,13 +143,14 @@
 
     <div class="col l4 s12">
 
-      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://priorart.ip.com/IPCOM/000258553" target="_blank">
+      <a data-tile="clickable" class="bx--tile bx--tile--clickable flat-link" tabindex="0" href="https://www.linkedin.com/in/filippo-tramonto/" target="_blank">
         <h2>Filippo Tramonto</h2>
         <span class="right-tile-img">
           <img src="static/team/tramonto.png">
         </span>
         Ecosystem Advocacy<br>
-        Solution Architect<br>
+        Solution Architect<br><br>
+        <span style="font-style:italic!important;">Theory and testing</span><br>
         <br>
         <span class="bx--tag bx--tag--warm-gray">IBM CIC</span>
         <br>
@@ -153,6 +159,15 @@
         </span>
       </a><br>
 
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col l12 s12">
+      <h1>Acknowledgement</h1>
+      We would like to thanks all that helped us in the development and positioning of our ideas, in particular Filippo Ravaglia for his technical advices.<br><br>
     </div>
 
   </div>
