--- a/static/emoticons.html
+++ b/static/emoticons.html
@@ -103,7 +103,7 @@
               <br><br>
               Want to know more?
               <br>
-              Read our documentation <a href="#" class="bx--link">here</a>.
+              Read our documentation <a href="/docs" class="bx--link">here</a>.
             </div>
           </div>
 
